# agriboard

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/scraper/: scraper.ipynb  scraper.py
